kubernetes/kubernetes-ingress/tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-deployment
  namespace: webapp
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: imrankhan28888/kub-demo-tasks:latestwebapp
          imagePullPolicy: Always
