kubernetes/kubernetes-ingress/tasks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
  namespace: webapp
spec:
  selector:
    app: tasks
 #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: tasks.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasks-service
            port:
              number: 8000
