kubernetes/kubernetes-ingress/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: webapp
spec:
  selector:
    app: users
# type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: users.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8080
